[package]

name = "hashids"
version = "1.1.0"
authors = [ "charsyam <charsyam@gmail.com>" ]
description = "HashIds Rust Implementation"
repository = "https://github.com/charsyam/hashids_rust"
keywords = ["rust", "hashids"]
license = "MIT"
edition = "2018"

include = [
  "**/*.rs",
  "Cargo.toml",
]

[dependencies]
regex = "1"
